# intercars-optimizer

./: .dockerignore  .env.example  .gitignore  .version  10 pozycji.cif  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEMO_ACCESS.md  Dockerfile  PRESENTATION.md  PROJECT.md  README.md  SCOPE_v3.1.md  SCOPE_v4.0.md  SECURITY.md  package-lock.json  prezentacja.md  pyproject.toml  railway.json  requirements-dev.txt  requirements.txt  start.sh  test_integration.py  untitled text 10.txt  untitled text 2.txt  untitled text 3.txt  untitled text 4.yml  untitled text.txt  vercel.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: nightly-smoke-failure.md  prod-smoke-failure.md
.github/workflows/: autobump-version.yml  ci.yml  nightly-smoke.yml  post-deploy.yml
app/: admin_routes.py  alerts_engine.py  auction_engine.py  auction_routes.py  auth.py  bi_mock.py  bi_routes.py  buying_engine.py  buying_routes.py  config.py  contract_engine.py  copilot_engine.py  data_layer.py  database.py  db_routes.py  document_parser.py  error_tracking.py  ewm_integration.py  integration_engine.py  integration_routes.py  main.py  marketplace_engine.py  marketplace_routes.py  migrations.py  mip_routes.py  observability.py  optimizer.py  osint_engine.py  pareto.py  portal_routes.py  prediction_engine.py  prediction_routes.py  process_digging.py  process_digging_routes.py  process_miner.py  project_engine.py  project_routes.py  rate_limit_backend.py  recommendation_engine.py  risk_engine.py  (+14 more)
app/static/: admin.html  index.html  portal.html  requester.html  superadmin.html
app/static/css/: base.css  components.css  layout.css  variables.css
app/static/js/: api.js  auth.js  copilot.js  state.js  ui.js  (+7 more)
docs/archive/: README.md
ops/: ALERTING.md  DEPLOY.md  ONCALL.md  SECRETS.md  STAGING.md  load-test.js  smoke_test.py  wait-for-deploy.sh
scripts/: bump_version.py
tests/: test_api.py  test_copilot_cart.py  test_phase1.py  test_tenant_isolation.py
tests/e2e/: conftest.py  test_copilot_cart.py  test_login.py
