[project]
name = "flow-procurement"
dynamic = ["version"]
requires-python = ">=3.11"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
# E2E tests start a real server + launch a browser, so run them only
# on explicit opt-in (--run-e2e or `pytest tests/e2e/`). The regular
# test suite stays fast.
addopts = "-ra --strict-markers --tb=short --ignore=tests/e2e"
filterwarnings = [
    "ignore::DeprecationWarning:pydantic.*",
    "ignore::DeprecationWarning:fastapi.*",
]
markers = [
    "e2e: browser end-to-end test (Playwright). Requires `playwright install chromium`.",
]

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "app/static/*",
    "app/__pycache__/*",
    "*/tests/*",
]

[tool.coverage.report]
precision = 1
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.coverage.xml]
output = "coverage.xml"

[tool.ruff]
line-length = 120
target-version = "py311"
